Add in my preffered maths notation

--- a/report.tex
+++ b/report.tex
@@ -12,6 +12,10 @@
 \author{Jordan Hay}
 \date{October 2022}
 
+% EMTH211 vector and matrix notation
+\renewcommand{\vec}[1]{\underline{#1}}
+\newcommand{\mat}[1]{\boldsymbol{#1}}
+
 \begin{document}
 
 \maketitle
