Throw in logical notation too

--- a/report.tex
+++ b/report.tex
@@ -17,6 +17,11 @@
 \renewcommand{\vec}[1]{\underline{#1}}
 \newcommand{\mat}[1]{\boldsymbol{#1}}
 
+% ENCE260 logical notation
+\renewcommand{\lnot}[1]{\overline{#1}}
+\renewcommand{\land}{\cdot}
+\renewcommand{\lor}{+}
+
 % References
 \addbibresource{report.bib}
 
@@ -32,6 +37,7 @@
 \pagenumbering{arabic}
 \section*{Introduction}
 \addcontentsline{toc}{section}{Introduction}
+
 
 \pagebreak
 \section{Context}
