Remove hyperref from footer

--- a/report.tex
+++ b/report.tex
@@ -50,7 +50,7 @@
 
 \pagebreak
 \pagenumbering{arabic}
-\fancyfoot[R]{\thepage/\pageref{page:final}}
+\fancyfoot[R]{\thepage/\pageref*{page:final}}
 \section*{Introduction}
 \addcontentsline{toc}{section}{Introduction}
 
