Tweak author and add a few more fav macros

--- a/report.tex
+++ b/report.tex
@@ -12,14 +12,15 @@
 \usepackage{titling}
 
 \title{Project Report Template}
-\author{Jordan Hay \cite{hay22}}
+\author{J. L. Hay \cite{hay22}}
 \date{November 2022}
 
 % EMTH211 vector and matrix notation
 \renewcommand{\vec}[1]{\underline{#1}}
 \newcommand{\mat}[1]{\boldsymbol{#1}}
 \newcommand{\innerprod}[2]{\left\langle #1, #2 \right\rangle}
-\newcommand{\dotprod}[2]{#1 \cdot #2}
+\newcommand{\norm}[1]{\left\|#1\right\|}
+\newcommand{\abs}[1]{\left|#1\right|}
 
 % ENCE260 logical notation
 \renewcommand{\lnot}[1]{\overline{#1}}
